--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,77 @@
 {
   "repositories": [
     {
-      "url": "https://github.com/eskirex/http.git",
-      "type": "git"
+      "type":"package",
+      "package": {
+        "name": "eskirex/web",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/web.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
     },
     {
-      "url": "https://github.com/eskirex/config.git",
-      "type": "git"
+      "type":"package",
+      "package": {
+        "name": "eskirex/http",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/http.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
     },
     {
-      "url": "https://github.com/eskirex/session.git",
-      "type": "git"
+      "type":"package",
+      "package": {
+        "name": "eskirex/session",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/session.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
     },
     {
-      "url": "https://github.com/eskirex/dotify.git",
-      "type": "git"
+      "type":"package",
+      "package": {
+        "name": "eskirex/dotify",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/dotify.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
+    },
+    {
+      "type":"package",
+      "package": {
+        "name": "eskirex/config",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/config.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
+    },
+    {
+      "type":"package",
+      "package": {
+        "name": "eskirex/cache",
+        "version":"master",
+        "source": {
+          "url": "https://github.com/eskirex/cachhe.git",
+          "type": "git",
+          "reference":"master"
+        }
+      }
     }
-
   ],
   "name": "eskirex/web",
   "type": "library",
